[package]
name = "ardea-os"
version = "0.1.0"
edition = "2021"
authors = ["Danail Delsizov <ddelsizov@gmail.com>"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort" 

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]